# project_co_server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_bench.cpp  main_chat.cpp  main_game.cpp  main_gate.cpp  main_login.cpp  main_rank.cpp  main_test.cpp  main_test_libgo.cpp  start.sh  stop.sh
core/: buffer.hpp  connection.cpp  connection.h  const.hpp  httplib.h  message.h  message.hpp  servlet.cpp  servlet.h  session.cpp  session.h  session.hpp  websocket.cpp  ws_session.cpp  ws_session.h
core/base/: base_routine.cpp  base_routine.h  base_server.cpp  base_server.h  gate_server_session.cpp  gate_server_session.h  routine.cpp  routine.h  rpc_server_session.cpp  rpc_server_session.h  timer_manager.cpp  timer_manager.h  work_routine.cpp  work_routine.h  work_routine_manager.cpp  work_routine_manager.h
core/game/: game_server.cpp  game_server.h  game_session.cpp  game_session.h
core/gate/: gate_peer_session.cpp  gate_peer_session.h  gate_server.cpp  gate_server.h  gate_session.cpp  gate_session.h  gate_ws_session.cpp  gate_ws_session.h  gate_wss_session.cpp  gate_wss_session.h
core/nats/: nats.cpp  nats.h
core/rad/: rad_server.h
core/redis/: redis_manager.cpp  redis_manager.h  redis_pool.cpp  redis_pool.h
core/rpc/: rpc_manager.cpp  rpc_manager.h  rpc_session.cpp  rpc_session.h
core/util/: base64.cpp  base64.h  md5.cpp  md5.h  md5.hpp  sha1.cpp  sha1.h  util.cpp  util.h
json/: game_server.json  gate.json  gate_server.json  log.json  login_server.json
log/: glog.h
logic/chat/: chat_manager.cpp  chat_manager.h  chat_server.cpp  chat_server.h
logic/chat/protocol/: chat_id.pb.cc
logic/chat/servlet/: chat_servlet.cpp  chat_servlet.h
logic/common/: error_code.h  redis_key.cpp  redis_key.h
logic/game/: game_server.cpp  game_server.h
logic/login/: account_manager.h  game_info_manager.cpp  game_info_manager.h  id_manager.cpp  id_manager.h  login_server.cpp  login_server.h  server__resource.cpp  server_resource.h
logic/login/protocol/: build_proto.sh  login.pb.cc  login.pb.h  login.proto  login_id.pb.cc  login_id.pb.h  login_id.proto
logic/login/servlet/: login_servlet.cpp  login_servlet.h
logic/protocol/: chat.pb.cc  chat.pb.h  chat.proto  chat_id.pb.h  chat_id.proto  login.pb.cc  login.pb.h  login.proto  login_id.pb.cc  login_id.pb.h  login_id.proto  public.pb.cc  public.pb.h  public.proto  rank.pb.cc  rank.pb.h  rank.proto  rank_id.pb.cc
logic/rank/: rank_server.cpp  rank_server.h  server_resource.cpp  server_resource.h
logic/rank/protocol/: rank.pb.cc  rank.pb.h  rank.proto  rank_id.pb.cc  rank_id.pb.h  rank_id.proto
logic/rank/servlet/: rank_servlet.cpp  rank_servlet.h
logic/task/: task_server.cpp  task_server.h
test/: bench_login_servlet.cpp  bench_login_servlet.h  bench_rank_servlet.cpp  bench_rank_servlet.h  connection.cpp  connection.h  ws_client.py
